Add transfer page + Change to dark design

--- a/gui/src/styles/global.scss
+++ b/gui/src/styles/global.scss
@@ -36,5 +36,5 @@ main {
 }
 
 @import "./layouts.scss";
-@import "./components/";
-@import "./pages/";
+@import "./components/*";
+@import "./pages/*";
