--- a/gui/src/styles/theme.scss
+++ b/gui/src/styles/theme.scss
@@ -288,12 +288,12 @@
     /* dark */
     --md-sys-color-primary-dark: #F4254F;
     --md-sys-color-on-primary-dark: #ffffff;
-    --md-sys-color-primary-container-dark: rgba(244, 37, 78, 0.10);
-    --md-sys-color-on-primary-container-dark: #F4254F;
-    --md-sys-color-secondary-dark: #b0cccb;
+    --md-sys-color-primary-container-dark: #ffffff;
+    --md-sys-color-on-primary-container-dark: #000000;
+    --md-sys-color-secondary-dark: #435756;
     --md-sys-color-on-secondary-dark: #1b3534;
-    --md-sys-color-secondary-container-dark: #324b4b;
-    --md-sys-color-on-secondary-container-dark: #cce8e7;
+    --md-sys-color-secondary-container-dark: #16171a;
+    --md-sys-color-on-secondary-container-dark: #ffffff;
     --md-sys-color-tertiary-dark: #b3c8e8;
     --md-sys-color-on-tertiary-dark: #1c314b;
     --md-sys-color-tertiary-container-dark: #334863;
@@ -306,7 +306,7 @@
     --md-sys-color-on-background-dark: #FFFFFF;
     --md-sys-color-surface-dark: #11131C;
     --md-sys-color-on-surface-dark: #FFFFFF;
-    --md-sys-color-surface-variant-dark: #24262e;
+    --md-sys-color-surface-variant-dark: #000000;
     --md-sys-color-on-surface-variant-dark: #CECECE;
     --md-sys-color-outline-dark: #889392;
     --md-sys-color-inverse-on-surface-dark: #11131C;
