--- a/gui/src/styles/theme.scss
+++ b/gui/src/styles/theme.scss
@@ -285,6 +285,41 @@
     --md-sys-color-scrim-light: #000000;
     --md-sys-color-text-secondary-light: #515151;
     --md-sys-color-primary-outline-light: rgba(244, 37, 78, 0.5);
+
+    /* light */
+    --md-sys-color-primary-light: #000000;
+    --md-sys-color-on-primary-light: #ffffff;
+    --md-sys-color-primary-container-light: #000000;
+    --md-sys-color-on-primary-container-light: #ffffff;
+    --md-sys-color-secondary-light: #565e71;
+    --md-sys-color-on-secondary-light: #ffffff;
+    --md-sys-color-secondary-container-light: #e6e8ee;
+    --md-sys-color-on-secondary-container-light: #1f1f1f;
+    --md-sys-color-tertiary-light: #4b607c;
+    --md-sys-color-on-tertiary-light: #ffffff;
+    --md-sys-color-tertiary-container-light: #d3e4ff;
+    --md-sys-color-on-tertiary-container-light: #041c35;
+    --md-sys-color-error-light: #ba1a1a;
+    --md-sys-color-error-container-light: #ffdad6;
+    --md-sys-color-on-error-light: #ffffff;
+    --md-sys-color-on-error-container-light: #410002;
+    --md-sys-color-background-light: #ffffff;
+    --md-sys-color-on-background-light: #171717;
+    --md-sys-color-surface-light: #ffffff;
+    --md-sys-color-on-surface-light: #171717;
+    --md-sys-color-surface-variant-light: #F7F9FC;
+    --md-sys-color-on-surface-variant-light: #3b3b3b;
+    --md-sys-color-outline-light: #515151;
+    --md-sys-color-inverse-on-surface-light: #ffffff;
+    --md-sys-color-inverse-surface-light: #2d3131;
+    --md-sys-color-inverse-primary-light: #4cdada;
+    --md-sys-color-shadow-light: #000000;
+    --md-sys-color-surface-tint-light: #006a6a;
+    --md-sys-color-outline-variant-light: #d9d9d9;
+    --md-sys-color-scrim-light: #000000;
+    --md-sys-color-text-secondary-light: #515151;
+    --md-sys-color-primary-outline-light: rgba(244, 37, 78, 0.5);
+    
     /* dark */
     --md-sys-color-primary-dark: #F4254F;
     --md-sys-color-on-primary-dark: #ffffff;
