--- a/gui/src/styles/components/transferlist.scss
+++ b/gui/src/styles/components/transferlist.scss
@@ -1,11 +1,14 @@
 .transfer-list {
     position: relative;
+    padding: 0;
     overflow: hidden;
 
     &-overlay {
         position: absolute;
         inset: 0;
         opacity: 0;
+        z-index: 1;
+        pointer-events: none;
 
         display: flex;
         align-items: center;
@@ -15,6 +18,41 @@
 
         transform: translateY(20px);
         transition: all var(--md-sys-motion-standard);
+    }
+
+    &-item {
+        display: flex;
+        align-items: center;
+        
+        gap: 16px;
+        padding: 8px 16px;
+        border-bottom: solid 1px var(--md-sys-color-outline-variant);
+
+        &-content {
+            width: 100%;
+        }
+
+        &-actions {
+            width: 80px;
+            flex-shrink: 0;
+            display: flex;
+            
+            justify-content: flex-end;
+        }
+
+        &.sender {
+            background-color: var(--md-sys-color-background);
+            // color: var(--md-sys-color-on-primary-container);
+
+            i {
+                // color: var(--md-sys-color-on-primary-container);
+            }
+        }
+    }
+
+    &-items {
+        overflow-y: auto;
+        height: 100%;
     }
 
     &.hover {
