--- a/gui/src/styles/pages/home.scss
+++ b/gui/src/styles/pages/home.scss
@@ -19,24 +19,38 @@
     }
 
     &-ip {
-        
+        z-index: 1;
     }
 
     &-status {
         position: absolute;
         inset: 0;
+        padding: 24px;
+        pointer-events: none;
 
         display: flex;
-        justify-content: center;
         align-items: center;
 
         opacity: 0;
         transform: translateY(20px);
         transition: all var(--md-sys-motion-standard);
+
+        &.error {
+            background-color: var(--md-sys-color-error-container);
+
+            .loader {
+                display: none;
+            }
+
+            h2 {
+                color: var(--md-sys-color-on-error-container);
+            }
+        }
     }
 
     &-container {
         position: relative;
+        overflow: hidden;
 
         &.connection-connecting {
             .home-ip {
