Add connect emit + socket error listener

--- a/gui/src/styles/pages/home.scss
+++ b/gui/src/styles/pages/home.scss
@@ -52,7 +52,8 @@
         position: relative;
         overflow: hidden;
 
-        &.connection-connecting {
+        &.connection-connecting,
+        &.connection-failed {
             .home-ip {
                 opacity: 0;
             }
