--- a/gui/src/styles/pages/home.scss
+++ b/gui/src/styles/pages/home.scss
@@ -23,7 +23,16 @@
 
         span {
             color: var(--md-sys-color-secondary);
-            margin-left: 16px;
+            margin-left: 0px;
+        }
+
+        h1 {
+            display: flex;
+            align-items: center;
+
+            .icon-button {
+                margin-left: 8px;
+            }
         }
     }
 
